compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__case_match_float_sized_big_endian.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 1296
expression: "\npub fn go(x) {\n  case x {\n    <<a:float-32-big, b:int>> -> #(a, b)\n    _ -> #(1.1, 2)\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<a:float-32-big, b:int>> -> #(a, b)
    _ -> #(1.1, 2)
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySliceToFloat } from "../gleam.mjs";

export function go(x) {
  if (
    x.bitSize >= 32 &&
    Number.isFinite(bitArraySliceToFloat(x, 0, 32, true)) &&
    x.bitSize === 40
  ) {
    let a = bitArraySliceToFloat(x, 0, 32, true);
    let b = x.byteAt(4);
    return [a, b];
  } else {
    return [1.1, 2];
  }
}
