compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__case_match_literal_float.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 1346
expression: "\npub fn go(x) {\n  case x {\n    <<1.4, b:int>> -> 1\n    _ -> 2\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<1.4, b:int>> -> 1
    _ -> 2
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySliceToFloat } from "../gleam.mjs";

export function go(x) {
  if (
    x.bitSize >= 64 &&
    bitArraySliceToFloat(x, 0, 64, true) === 1.4 &&
    x.bitSize === 72
  ) {
    let b = x.byteAt(8);
    return 1;
  } else {
    return 2;
  }
}
