compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__bit_arrays__case_match_rest.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/bit_arrays.rs
assertion_line: 1448
expression: "\npub fn go(x) {\n  case <<1, 2, 3>> {\n    <<_, b:bytes>> -> b\n    _ -> x\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case <<1, 2, 3>> {
    <<_, b:bytes>> -> b
    _ -> x
  }
}


----- COMPILED JAVASCRIPT
import { toBitArray, bitArraySlice } from "../gleam.mjs";

export function go(x) {
  let $ = toBitArray([1, 2, 3]);
  if ($.bitSize >= 8 && ($.bitSize - 8) % 8 === 0) {
    let b = bitArraySlice($, 8);
    return b;
  } else {
    return x;
  }
}
